Fixed: Bug 27854 - Options are hidden by information layer adjusted z-index; caused by remove of window-panel with commit d09e151ec661fd9c564df7fb61b37e16cd302373

--- a/ui/apps/themes/style.less
+++ b/ui/apps/themes/style.less
@@ -929,7 +929,7 @@ a.button {
     bottom: 0px;
     left: @windowHeadWidth;
     white-space: normal;
-    z-index: 10;
+    z-index: 1;
     .user-select(text);
 }
 
